--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </div>
   
   <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container">
+    <div class="container fluid">
      <div class="collapse navbar-collapse justify-content-end"></div>
         <div class="col-2">
             <button type="button" class="btn btn-dark" alt="boton_1">Cancel</button>
